# waka-waka-waku

./: .gitignore  Cargo.toml  README.md  run.sh
.github/: CODEOWNERS
.github/workflows/: pipeline.yml
files/: waku.postman_collection.json
src/: http_client.rs  lib.rs  main.rs
tests/: integration_tests.rs
