[package]
name = "waka-waka-waku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38.0", features = ["full"] }  # Add tokio with full features
urlencoding = "2.1.3"  # Add urlencoding crate
serial_test = "3.1.1"

